# scaffy

./: Cargo.toml  README.md
scripts/: gen-paths.js
src/: app.rs  input_widget.rs  main.rs  string_ops.rs  template_info.rs  templates.rs
src/tabs/: mod.rs  project_init.rs  scaffold.rs  search.rs  tag.rs  template.rs
templates/: templates.json
templates/__scaffy_template_contents/: basic-rust-workspace.json  react-web-app-starter.json  rust-wasm-starter.json
templates/basic-rust-workspace/: Cargo.toml
templates/basic-rust-workspace/@@SCAFFY_PROJECT_NAME_KEBABCASE@@/: Cargo.toml
templates/basic-rust-workspace/@@SCAFFY_PROJECT_NAME_KEBABCASE@@-macros/src/: lib.rs
templates/basic-rust-workspace/@@SCAFFY_PROJECT_NAME_LOWERKEBABCASE@@-macros/: Cargo.toml
templates/basic-rust-workspace/@@SCAFFY_PROJECT_NAME_LOWERKEBABCASE@@/src/: main.rs
templates/react-web-app-starter/: .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
templates/react-web-app-starter/public/: manifest.json
templates/react-web-app-starter/src/: index.css  main.tsx  routeTree.gen.ts  state.tsx  theme.css
templates/react-web-app-starter/src/components/: Button.tsx  Header.tsx
templates/react-web-app-starter/src/routes/: __root.tsx  index.tsx
templates/react-web-app-starter/src/routes/app/: index.tsx
templates/rust-wasm-starter/: Cargo.toml  LICENSE_MIT  README.md
templates/rust-wasm-starter/demo/: example.js  index.html
templates/rust-wasm-starter/src/: lib.rs
templates/rust-wasm-starter/src/ffi/: mod.rs
