[package]
name = "scaffy"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
futures = "0.3.31"
futures-scopes = "0.4.0"
itertools = "0.14.0"
log = "0.4.29"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
simple-logging = "2.0.2"
smol = "2.0.2"
surf = "2.3.2"
tui-input = "0.14.0"
