[package]
name = "scaffy"
description = "A convenient template scaffolding TUI"
license = "MIT"
authors = ["hydrogenmacro"]
version = "0.1.2"
edition = "2024"
repository = "https://github.com/HydrogenMacro/scaffy"

[dependencies]
aho-corasick = "1.1.4"
color-eyre = "0.6.5"
futures = "0.3.31"
futures-scopes = "0.4.0"
itertools = "0.14.0"
log = "0.4.29"
ratatui = { version="0.29.0", features=["unstable-rendered-line-info"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
simple-logging = "2.0.2"
smol = "2.0.2"
surf = "2.3.2"
tui-input = "0.14.0"
