[package]
name = "@@SCAFFY_PROJECT_NAME_LOWERSNAKECASE@@"
version = "0.1.0"
authors = []
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1.0.0"
log = "0.4.29"
js-sys = "0.3.83"
wee_alloc = "0.4.5"
anyhow = "1.0.100"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
strip = "debuginfo"
